add a dev config

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Demo</title>
-
+    <title>Demo-File</title>
     <!-- load js -->
-
 </head>
 <body>
-<script>
-
-</script>
+    <!-- loads the graph -->
+    <div id="graph"></div>
 </body>
 </html>
