working webpack config

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -9,4 +9,9 @@
     <!-- loads the graph -->
     <div id="graph"></div>
 </body>
+<script>
+    document.addEventListener("DOMContentLoaded", (event) => {
+        console.log('dTree', dTree.init);
+    });
+</script>
 </html>
