working umd bundle and excluding lodash from bundle

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Demo-File</title>
+    <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
+
     <!-- load js -->
 </head>
+
 <body>
     <!-- loads the graph -->
     <div id="graph"></div>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", (event) => {
-        console.log('dTree', dTree.init);
+        dTree.init();
     });
 </script>
 </html>
