--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <title>Demo-File</title>
     <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
     <!-- load js -->
 </head>
 
 <body>
-    <!-- loads the graph -->
-    <div id="graph"></div>
+<!-- loads the graph -->
+<div id="graph"></div>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", (event) => {
-        dTree.init();
+        const treeJson = d3.json("data.json", (error, treeData) => {
+            dTree.init(treeJson);
+        });
     });
 </script>
 </html>
